<resources>
    <string name="app_name">ShiftChecklist</string>
    <string name="PHONE_NUMBER">כניסה באמצעות מספר טלפון</string>
    <string name="ASSIGNMENTS_FORM">משימות משמרת</string>
    <string name="HOME">בית</string>
    <string name="ASSIGNMENTS">משימות אישיות</string>
    <string name="ASSIGNMENTS_S">משימות אחמ\"ש</string>

    <string name="MANAGE_E_ASSIGNMENTS">ניהול משימות עובדים</string>
    <string name="MANAGE_S_ASSIGNMENTS">ניהול משימות אחמ"\"שים</string>

    <string name="USER_PROFILE">פרופיל אישי</string>
    <string name="Log_Out">התנתקות</string>
    <string name="FIRST_NAME">שם פרטי</string>
    <string name="LAST_NAME">שם משפחה</string>

    <string name="Edit_Profile">עריכת פרופיל</string>
    <string name="Save_Changes">שמירה</string>
    <string name="Done">בוצע</string>
    <string name="NotDone">לא בוצע</string>
    <string name="Note">הוספת הערה (אופציונלי)</string>
    <string name="Employee">עובד</string>
    <string name="ShiftManager">אחמ"\"ש</string>
    <string name="Owner">בעלים</string>

    <string name="RESTAURANT">מסעדה</string>
    <string name="DELIVERY">משלוחים</string>
    <string name="BAR">בר</string>
    <string name="CHOOSE_DEPARTMENT">בחירת מחלקה לשיוך משימות:</string>
    <string name="motivation">""\"האדם היחיד שנועדתם להיות הוא האדם שאתם מחליטים להיות"\"</string>
    <string name="author">ראלף וולדו אמרסון</string>
    <string name="TOKEN">קוד אימות</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>


    <string name="INSERT_ASSIGNMENT">הוספת משימה:</string>
    <string name="ADD">שמירה</string>
    <string name="NEXT">המשך</string>


</resources>