<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/menu_ITM_profile"
                android:title="@string/USER_PROFILE"
                android:icon="@drawable/settings_icon" />
            <item
                android:id="@+id/menu_ITM_assign"
                android:title="@string/ASSIGNMENTS"
                android:icon="@drawable/assignment_icon" />
            <item android:title="" />
            <item android:title="" />
            <item android:title="" />
            <item android:title="" />
            <item android:title="" />
            <item android:title="" />
            <item
                android:id="@+id/menu_ITM_logout"
                android:title="@string/Log_Out"
                android:icon="@drawable/logout_icon" />


        </menu>
    </item>

</menu>