<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Login"
    android:layoutDirection="rtl"
    android:background="@color/black">

    <ImageView
        android:id="@+id/login_IMG_icon"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/kitto_katto"
        android:contentDescription="@string/HOME"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_IMG_icon"
        android:layout_alignStart="@+id/login_IMG_icon"
        android:layout_alignEnd="@+id/login_IMG_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-1dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/app_name"
            android:textColorHint="@color/white"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:backgroundTint="#FFC7F2"
            android:fontFamily="@font/varela_round"
            android:hint="@string/PHONE_NUMBER"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:minLines="2"
            android:textSize="18sp"
            app:icon="@drawable/ic_baseline_local_phone_24"
            app:iconSize="18dp"
            app:iconTint="@color/black" />

    </LinearLayout>
</RelativeLayout>