<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layoutDirection="rtl"
    tools:context=".Activities.Activity_Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_IMG_user"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/man"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/arimo_bold"
                    android:text="@string/USER_PROFILE"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/person" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:elegantTextHeight="true"
                        android:text="@string/FIRST_NAME"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_EDT_first_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/white"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="216dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="28dp"
                            android:inputType="textPersonName"
                            android:maxLength="20"
                            android:textColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/person" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:elegantTextHeight="true"
                        android:text="@string/LAST_NAME"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/register_EDT_last_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLength="20"
                            android:textColor="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/darker_gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/darker_gray" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_BTN_user"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_employee"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/Employee"
                        android:textColor="@color/white"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_shiftManager"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/ShiftManager"
                        android:textColor="@color/white"
                         />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_owner"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/Owner"
                        android:textColor="@color/white"/>
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_BTN_department"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_restaurant"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/RESTAURANT"
                        android:textColor="@color/white"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_delivery"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/DELIVERY"
                        android:textColor="@color/white"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_BTN_bar"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:insetLeft="5dp"
                        android:insetRight="5dp"
                        android:text="@string/BAR"
                        android:textColor="@color/white"/>
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <EditText
                    android:id="@+id/token_EDT_password"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="numberPassword"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:backgroundTint="#FFFFFF"
                    android:autofillHints="@string/TOKEN"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="invisible"
                    android:textColorHint="@color/material_on_primary_emphasis_medium"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_BTN_register"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:drawableRight="@drawable/edit"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    android:paddingRight="15dp"
                    android:text="@string/Save_Changes"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:cornerRadius="50dp"
                    app:strokeColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>